# LLMGateway

./: .env.example  .gitattributes  .gitignore  README.md  TODO-dashboard.md  bootstrap-llmgateway.sh  bootstrap.sh  design.md  gw  litellm-config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
benchmark/: .gitignore  NEXT_RUN.md  README.md  SESSION_STATE.md  bench_subagent_helper.py  exp_phase1_reasoning.sh  harness.py  run_14b_1_to_12.sh  run_14bcoder_1_to_12.sh  run_32bcoder16k_1_to_3.sh  run_32bcoder_1_to_12.sh  run_capped_2_to_12.sh  run_gemma4_128k_1_to_12.sh  run_gemma4_1_to_12.sh  run_qwen36_1_to_12.sh  run_qwen36_iter_1_to_12.sh
benchmark/results/: CONSOLIDATED_2026-05-24.md  baseline_sonnet_subagent.md  headroom_128k_gemma4.md  opus_grades.md  run2_regrade.md  run2_summary.md  run_14b_aborted.md  run_14bcoder.md  run_32bcoder.md  run_32bcoder16k.md  run_gemma4_128k_partial.md  run_qwen36.md  run_qwen36_iter.md  (+1 more)
config/: agents.yaml  litellm-config.yaml  llmgateway.defaults.yaml  local_models.yaml  providers.yaml  routing.yaml
docker/: Dockerfile  docker-compose.observability.yml  docker-compose.yml
headless/: README.md  com.local.headless-shim.plist  config.json  headless_ctl.sh  index.html  install.sh  shim.py
provisioning/: provision.py
scripts/: cli_symlink.py  console.py  data_dir.py  llmgateway.py  migrate-to-opt-storage.py  setup-llmgateway.py  setup_config.py  ssh-remote-setup.py
tests/: conftest.py  test_api.py  test_config_schema.py  test_docker_model_runner.py  test_llmfit.py  test_ui.py  test_whisper_manager.py
(+573 files in other folders)
